<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MultiGamePad</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="l1">L1</string>
    <string name="l2">L2</string>
    <string name="r2">R2</string>
    <string name="r1">R1</string>
    <string name="player_x">Player X</string>
    <string name="select">select</string>
    <string name="start">start</string>
    <string name="todo">TODO</string>

</resources>
