<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="0dp"
    android:background="@drawable/bgmanette"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:showDividers="middle"
    tools:context=".MainActivity" >

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_weight="5" >

        <Button
            android:id="@+id/L1"
            style="@style/btnStyleBlackpearl"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/l1"
            android:visibility="visible" />

        <Button
            android:id="@+id/L2"
            style="@style/btnStyleBlackpearl"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/l2"
            android:visibility="visible" />

        <android.support.v7.widget.Space
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/R2"
            style="@style/btnStyleBlackpearl"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/r2"
            android:visibility="visible" />

        <Button
            android:id="@+id/R1"
            style="@style/btnStyleBlackpearl"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/r1"
            android:visibility="visible" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:paddingTop="25dp" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="left"
            android:layout_weight="3" >

            <RelativeLayout
                android:id="@+id/table_pad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="40dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/idirpad"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:longClickable="true" >

            </RelativeLayout>
        </RelativeLayout>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="4" >

            <TextView
                android:id="@+id/player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/player_x"
                android:textColor="#000000" />

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" >

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:minWidth="40dp"
                    android:paddingRight="5dp" >

                    <ImageButton
                        android:id="@+id/select"
                        style="@style/btnStyleBlackpearl"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/select"
                        android:fitsSystemWindows="true" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center"
                        android:clickable="false"
                        android:gravity="center"
                        android:text="@string/select" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:minWidth="40dp"
                    android:paddingLeft="5dp" >

                    <ImageButton
                        android:id="@+id/start"
                        style="@style/btnStyleBlackpearl"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/start"
                        android:fitsSystemWindows="true" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center"
                        android:clickable="false"
                        android:gravity="center"
                        android:text="@string/start" />
                </FrameLayout>
            </TableRow>
        </TableLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:layout_weight="3" >

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="40dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp" >

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" >

                    <android.support.v7.widget.Space
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1" />

                    <ImageButton
                        android:id="@+id/triangle"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="@drawable/triangle"
                        android:contentDescription="@string/todo" />

                    <android.support.v7.widget.Space
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" >

                    <ImageButton
                        android:id="@+id/carre"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="@drawable/carre"
                        android:contentDescription="@string/todo" />

                    <android.support.v7.widget.Space
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1" />

                    <ImageButton
                        android:id="@+id/cercle"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="@drawable/rond"
                        android:contentDescription="@string/todo" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" >

                    <android.support.v7.widget.Space
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1" />

                    <ImageButton
                        android:id="@+id/croix"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="@drawable/croix"
                        android:contentDescription="@string/todo" />

                    <android.support.v7.widget.Space
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1" />
                </TableRow>
            </TableLayout>
        </RelativeLayout>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="bottom"
        android:layout_weight="5" >

        <android.support.v7.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:src="@android:drawable/arrow_up_float" />

        <android.support.v7.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </TableRow>

</LinearLayout>